--- a/templates/ab.html
+++ b/templates/ab.html
@@ -1,4 +1,5 @@
 <html>
+
 <head>
     <script>
         function syntaxHighlight(json) {
@@ -78,17 +79,7 @@
             overflow: auto;
         }
 
-        .json-key {
-            color: brown;
-        }
-
-        .json-value {
-            color: navy;
-        }
-
-        .json-string {
-            color: olive;
-        }
+        
 
         .main-container {
             display: flex;
@@ -116,7 +107,7 @@
 
         .half-containers {
             flex: 0 0 100%;
-            max-height: 50%;
+            max-height: 100%;
             min-height: 50%;
             max-width: 100%;
             overflow: scroll;
@@ -133,11 +124,11 @@
 <body>
     <a href="/" class="home">HOME</a>
     <div>
-        <h2 class="center  color-blue">VWO Golang SDK Example : <strong>{{ .campaign_type }}</strong></h2>
+        <h2 class="center  color-blue">VWO Golang SDK Example : <strong>{{ .campaignType }}</strong></h2>
         <div class="main-container">
             <div class="left-container">
                 <h2 class="center  color-grey">Settings</h2>
-                <pre><code>{{ .settings_file }}</code></pre>
+                <pre id="settings"><code>{{ .settingsFile }}</code></pre>
             </div>
 
             <div class="right-container">
@@ -145,25 +136,25 @@
                     <h2 class="center  color-grey">Details</h2>
 
                     <div class="center  margin--top">
-                        <div>Campaign key - <strong>{{ .ab_campaign_key }}</strong></div>
+                        <div>Campaign key - <strong>{{ .abCampaignKey }}</strong></div>
                     </div>
                     <div class="center margin--top">
-                        <div>Campaign goal identifier - <strong>{{ .ab_campaign_goal_identifier }}</strong></div>
+                        <div>Campaign goal identifier - <strong>{{ .abCampaignGoalIdentifier }}</strong></div>
                     </div>
                     <div class="center  margin--top">
                         <div>Custom Variables -</div>
-                        <pre><code>{{ .custom_variables }}</code></pre>
+                        <pre><code>{{ .customVariables }}</code></pre>
                     </div>
                     <div class="center  margin--top">
-                        <div>User ID - <strong>{{ .user_id }}</strong></div>
+                        <div>User ID - <strong>{{ .userID }}</strong></div>
                     </div>
                     <div class="center  margin--top">
                         <div>Track - <strong>{{ .track }}</strong></div>
                     </div>
 
-                    {{if .is_part_of_campaign}}
+                    {{if .isPartOfCampaign}}
                     <div class="center  margin--top">
-                        <div>variationAssigned - <strong>{{ .variation_name }}</strong></div>
+                        <div>Variation Assigned - <strong>{{ .variationName }}</strong></div>
                     </div>
                     {{else}}
                     <div class="center  margin--top">
@@ -171,15 +162,13 @@
                     </div>
                     {{end}}
                     <div class="half-containers  center">
-                        {{if .is_part_of_campaign}}
-                        <button class="v1">{{ .variation_name }}</button>
+                        {{if .isPartOfCampaign}}
+                        <button class="{{ .buttonClass }}">{{ .variationName }}</button>
                         {{else}}
                         <button>Not part</button>
                         {{end}}
                     </div>
-                    <div class="half-containers  center">
-                    {{.button}}
-                    </div>
+
                 </div>
             </div>
         </div>
