--- a/templates/featureTest.html
+++ b/templates/featureTest.html
@@ -1,6 +1,34 @@
 <html>
 
 <head>
+    <script>
+        function syntaxHighlight(json) {
+            json = JSON.stringify(JSON.parse(json), undefined, 2);
+            json = json.replace(/&/g, '&amp;').replace(/</g, '&lt;').replace(/>/g, '&gt;');
+            return json.replace(
+                /("(\\u[a-zA-Z0-9]{4}|\\[^u]|[^\\"])*"(\s*:)?|\b(true|false|null)\b|-?\d+(?:\.\d*)?(?:[eE][+\-]?\d+)?)/g,
+                function (match) {
+                    var cls = 'number';
+                    if (/^"/.test(match)) {
+                        if (/:$/.test(match)) {
+                            cls = 'key';
+                        } else {
+                            cls = 'string';
+                        }
+                    } else if (/true|false/.test(match)) {
+                        cls = 'boolean';
+                    } else if (/null/.test(match)) {
+                        cls = 'null';
+                    }
+                    return '<span class="' + cls + '">' + match + '</span>';
+                });
+        }
+
+        window.onload = () => {
+            document.getElementById('settings').innerHTML = syntaxHighlight(document.getElementById('settings')
+                .innerText);
+        }
+    </script>
     <title>VWO server-side Experimentation</title>
     <style>
         .center {
@@ -35,32 +63,12 @@
             border: 2px solid #ff9a9a;
         }
 
-        button.v2 {
-            border: 2px solid #57e0a2;
-        }
-
-        button.v3 {
-            border: 2px solid #00a8ff;
-        }
-
         pre {
             background-color: ghostwhite;
             border: 1px solid silver;
             padding: 10px 20px;
             max-height: 80vh;
             overflow: auto;
-        }
-
-        .json-key {
-            color: brown;
-        }
-
-        .json-value {
-            color: navy;
-        }
-
-        .json-string {
-            color: olive;
         }
 
         .main-container {
@@ -96,9 +104,9 @@
         }
 
         .home {
-        position: fixed;
-        top: 10px;
-        left: 20px;
+            position: fixed;
+            top: 10px;
+            left: 20px;
         }
     </style>
 </head>
@@ -106,11 +114,11 @@
 <body>
     <a href="/" class="home">HOME</a>
     <div>
-        <h2 class="center  color-blue">VWO Golang SDK Example : <strong>{{ .campaign_type }}</strong></h2>
+        <h2 class="center  color-blue">VWO Golang SDK Example : <strong>{{ .campaignType }}</strong></h2>
         <div class="main-container">
             <div class="left-container">
                 <h2 class="center  color-grey">Settings</h2>
-                <pre><code>{{ .settings_file }}</code></pre>
+                <pre id="settings"><code>{{ .settingsFile }}</code></pre>
             </div>
 
             <div class="right-container">
@@ -118,20 +126,20 @@
                     <h2 class="center  color-grey">Details</h2>
 
                     <div class="center  margin--top">
-                        <div>Campaign key - <strong>{{ .feature_campaign_key }}</strong></div>
+                        <div>Campaign key - <strong>{{ .featureCampaignKey }}</strong></div>
                     </div>
                     <div class="center margin--top">
-                        <div>Campaign goal identifier - <strong>{{ .feature_campaign_goal_identifier }}</strong></div>
+                        <div>Campaign goal identifier - <strong>{{ .featureCampaignGoalIdentifier }}</strong></div>
                     </div>
                     <div class="center  margin--top">
                         <div>Custom Variables -</div>
-                        <pre><code>{{ .custom_variables }}</code></pre>
+                        <pre><code>{{ .customVariables }}</code></pre>
                     </div>
                     <div class="center  margin--top">
-                        <div>User ID - <strong>{{ .user_id }}</strong></div>
+                        <div>User ID - <strong>{{ .userID }}</strong></div>
                     </div>
 
-                    {{if .is_user_part_of_feature_campaign}}
+                    {{if .isUserPartOfFeatureCampaign}}
                     <div class="center  margin--top">
                         <div>User became a part of feature test </div>
                     </div>
@@ -142,17 +150,17 @@
                     {{end}}
                 </div>
                 <div class="half-containers  center">
-                    {{if .boolean_variable}}
-                    <button class="v1">BOOLEAN: {{.boolean_variable}}</button>
+                    {{if .booleanVariable}}
+                    <button class="v1">BOOLEAN: {{.booleanVariable}}</button>
                     {{end}}
-                    {{if .integer_variable}}
-                    <button class="v1">INTEGER: {{.integer_variable}}</button>
+                    {{if .integerVariable}}
+                    <button class="v1">INTEGER: {{.integerVariable}}</button>
                     {{end}}
-                    {{if .double_variable}}
-                    <button class="v1">DOUBLE: {{.double_variable}}</button>
+                    {{if .doubleVariable}}
+                    <button class="v1">DOUBLE: {{.doubleVariable}}</button>
                     {{end}}
-                    {{if .string_variable}}
-                    <button class="v1">STRING: {{.string_variable}}</button>
+                    {{if .stringVariable}}
+                    <button class="v1">STRING: {{.stringVariable}}</button>
                     {{end}}
                 </div>
             </div>
