--- a/templates/goSDK.html
+++ b/templates/goSDK.html
@@ -72,24 +72,6 @@
             margin: 0 10px;
         }
 
-        .right-container {
-            flex: 0 1 50%;
-            display: flex;
-            height: 100%;
-            max-width: 50%;
-            flex-wrap: wrap;
-            align-items: flex-start;
-            margin: 0 10px;
-        }
-
-        .half-containers {
-            flex: 0 0 100%;
-            max-height: 50%;
-            min-height: 50%;
-            max-width: 100%;
-            overflow: hidden;
-        }
-
         .home {
             position: fixed;
             top: 10px;
@@ -101,43 +83,12 @@
 <body>
     <a href="/" class="home">HOME</a>
     <div>
-        <h2 class="center  color-blue">VWO Golang SDK Example : <strong>PUSH API</strong></h2>
+        <h2 class="center  color-blue">VWO Golang SDK Example : <strong>GO_SDK</strong></h2>
         <div class="main-container">
             <div class="left-container">
                 <h2 class="center  color-grey">Settings</h2>
                 <pre id="settings"><code>{{ .settingsFile }}</code></pre>
             </div>
-
-            <div class="right-container">
-                <div class="half-containers">
-                    <h2 class="center  color-grey">Details</h2>
-
-                    <div class="center  margin--top">
-                        <div>Tag Key - <strong>{{ .tagKey }}</strong></div>
-                    </div>
-
-                    <div class="center  margin--top">
-                        <div>Tag Value - <strong>{{ .tagValue }}</strong></div>
-                    </div>
-
-                    <div class="center  margin--top">
-                        <div>User ID - <strong>{{ .userID }}</strong></div>
-                    </div>
-
-                    {{if .result}}
-                    <div class="center  margin--top">
-                        <div>Data pushed to server successfully</div>
-                    </div>
-                    {{else}}
-                    <div class="center  margin--top">
-                        <div>Failed to push data to the server</div>
-                    </div>
-                    {{end}}
-                </div>
-            </div>
         </div>
-
     </div>
 </body>
-
-</html>
