--- a/templates/homePage.html
+++ b/templates/homePage.html
@@ -44,6 +44,7 @@
 					<li><a href="/feature-rollout">Feature Rollout</a></li>
 					<li><a href="/feature-test">Feature Test</a></li>
 					<li><a href="/push">Push Api</a></li>
+					<li><a href="/go-sdk">Go SDK</a></li>
 				</ul>
 			</div>
 		</div>
